tests/machine/x/go/group_by.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by.go:11:14: undefined: PeopleItem
tests/machine/x/go/group_by.go:12:3: undefined: PeopleItem
tests/machine/x/go/group_by.go:17:3: undefined: PeopleItem
tests/machine/x/go/group_by.go:22:3: undefined: PeopleItem
tests/machine/x/go/group_by.go:27:3: undefined: PeopleItem
tests/machine/x/go/group_by.go:32:3: undefined: PeopleItem
tests/machine/x/go/group_by.go:37:3: undefined: PeopleItem
tests/machine/x/go/group_by.go:43:20: undefined: Stats
tests/machine/x/go/group_by.go:57:16: undefined: Stats
tests/machine/x/go/group_by.go:60:30: undefined: Stats
tests/machine/x/go/group_by.go:60:30: too many errors
